objects/ApplicationStatusToOptyMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Maps the Application Status&apos;s&apos; from Next Gen to the equivalent Opty Stage, with a Flag to configure if this Status record should be shown under the Opty</description>
    <fields>
        <fullName>Application_Status__c</fullName>
        <description>The Status values received from NextGen Application data</description>
        <label>Application Status</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>B2B_Oppty_Stage_Name__c</fullName>
        <label>B2B Oppty Stage Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_Name__c</fullName>
        <description>The Opportunity Stage that will be set when the corresponding Application Status is inserted into Pepper_Data__c.  Blank means NO update.</description>
        <label>Opportunity Stage Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Determines the order of precedence for Intra-Day updates - only the highest Order should update the Opty.</description>
        <label>Order</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ShowRelatedToOpty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the Application Id is set on the Opportunity Record, Application Status&apos;s are related to said Opty where this Flag = True</description>
        <label>ShowRelatedToOpty</label>
        <type>Checkbox</type>
    </fields>
    <label>ApplicationStatusToOptyMapping</label>
</CustomObject>